--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,10 @@ cache: bundler
 before_install:
   - bundle -v
   - rm -f Gemfile.lock
-  - gem update --system $RUBYGEMS_VERSION
+  - "# Update system gems if requested. This is useful to temporarily workaround troubles in the test runner"
+  - "# See https://github.com/puppetlabs/pdk-templates/commit/705154d5c437796b821691b707156e1b056d244f for an example of how this was used"
+  - "# Ignore exit code of SIGPIPE'd yes to not fail with shell's pipefail set"
+  - '[ -z "$RUBYGEMS_VERSION" ] || (yes || true) | gem update --system $RUBYGEMS_VERSION'
   - gem --version
   - bundle -v
 script:
@@ -13,9 +16,6 @@ script:
 bundler_args: --without system_tests
 rvm:
   - 2.5.3
-env:
-  global:
-    - PUPPET_GEM_VERSION="~> 6.0"
 stages:
   - static
   - spec
@@ -46,15 +46,3 @@ branches:
     - /^v\d/
 notifications:
   email: false
-before_deploy:
-  - bundle install --with release
-  - bundle exec pdk build
-deploy:
-  provider: puppetforge
-  user: puppetlabs
-  password:
-    secure: "$SECURE_PASS"
-  on:
-    tags: true
-    all_branches: true
-    condition: "$DEPLOY_TO_FORGE = yes"
